examples/components/error/error-message-date.njk
{% from "components/form/controls/date-input.njk" import datoinput as datoinput %}

{{
    datoinput({
        "id": "date-input-error-example",
        "legend": "Hvornår blev dit pas udstedt?",
        "helptext": "For eksempel: 05 12 2018",
        "errorMessage": "Datoen kan ikke være i fremtiden",
        "values": {
            "day": "01",
            "month": "12",
            "year": "2076"
        },
        "name": {
            "day": "date-day",
            "month": "date-month",
            "year": "date-year"
        }
    })
}}